# watchc

./: Cargo.toml  README.adoc  watch.sh
src/: main.rs
